2726 [OneClick]             removed the "Anamorph Output" option in the OneClick profile. Please use the anamorphic encoding options in the AviSynth profile instead.
2725 [Main]                 fixed wrong AR of a "video encoding" queued job in rare cases (regression of 2610)
2724 [OneClick]             cosmetic fix as sometimes even with "don't encode video" some video processing options were not disabled
2723 [OneClick]             improved error handling of invalid AviSynth scripts
2722 [Main]                 if not at least AviSynth 2.6 is installed the portable build will be used
                            improved AviSynth logging 
2720 [AviSynth Wrapper]     added functions to detect AviSynth details
2719 [AviSynth Wrapper]     updated wrapper to interface 3
2718 [FFMS Indexer]         enabled AVI file handling
2717 [AviSynth Wrapper]     improved error handling
2716 [VideoEncoder]         extended avs log information


Changelog 2624 --> 2715

Features/Changes:
[AudioEncoder]         default to LWLibavAudioSource()/LSMASHAudioSource()
[AviSynth]             replaced Yadif by Yadifmod2
[FileIndexer]          added title selector for DVD sources incl. multi-angle support
[Update]               improved updater to download appropriate architecture packages (can be deselected in the options)
[VobSubber]            The VobSubber has been enhanced
                       - to support demux of forced subtitles
					   - to select if the subtitles should be extracted to multiple files
					   - with improved speed as the source will only be indexed once for multiple tracks
					   - to detect DVD sources incl. multi-angle suppor
[x265 Encoder]         x265 is now always enabled

Enhancements/Fixes:
[AudioEncoder]         added downmix option to 5.1
[FileIndexer]          added IFO as supported input file type
[Haali Media Splitter] if the Haali Media Splitter is needed by the HD Streams Extractor it will be installed (administrative permissions are required)